<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpiz"

    tools:context=".MainActivity">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_alignParentStart="true"
       android:layout_marginTop="250dp"
       android:background="@drawable/layoutu"
       android:orientation="vertical"
       android:padding="30dp"
>

      <TextView
          android:id="@+id/register"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="5dp"
          android:layout_marginEnd="5dp"
          android:layout_marginBottom="5dp"
          android:padding="5dp"

          android:text="@string/registe"
          android:textColor="@color/black"
          android:textSize="35dp"
          android:textStyle="bold" />

      <EditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/register"


          android:layout_margin="10dp"
          android:drawableLeft="@drawable/ic_baseline_person_24"
          android:drawablePadding="5dp"
          android:hint="@string/usernam"
          android:padding="20dp"
          android:textColor="@color/black"
          android:textColorHint="@color/black"
          android:singleLine="true"
          android:ellipsize="end"/>

      <EditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/username"
          android:singleLine="true"
          android:ellipsize="end"


          android:layout_margin="10dp"
          android:drawableLeft="@drawable/ic_baseline_email_24"
          android:drawablePadding="5dp"
          android:hint="@string/email"
          android:padding="20dp"
          android:textColor="@color/black"
          android:textColorHint="@color/black" />

      <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/email"

          android:layout_margin="10dp"
          android:drawableLeft="@drawable/ic_baseline_lock_24"
          android:drawablePadding="5dp"
          android:hint="@string/pass"
          android:padding="20dp"
          android:textColor="@color/black"
          android:textColorHint="@color/black"
          android:singleLine="true"
          android:ellipsize="end"/>

      <Button
          android:id="@+id/regibutton"
          android:layout_width="210dp"
          android:layout_height="69dp"
          android:layout_below="@id/password"
          android:layout_centerHorizontal="true"
          android:layout_gravity="center"
          android:layout_marginStart="10dp"
          android:layout_marginTop="20dp"
          android:backgroundTint="#AC8B46"
          android:textSize="20dp"
          android:text="@string/regi" />


   </LinearLayout>





</RelativeLayout>