<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpiz"

    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="320dp"
        android:background="@drawable/layoutu"
        android:orientation="vertical"
        android:padding="30dp"


        >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:padding="5dp"

            android:text="@string/logi"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp"


        android:text="@string/sign_up"
        android:textColor="#94706969"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_below="@+id/register"



            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:ellipsize="end"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@+id/email"

            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_gravity="end"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="Forget Password?" />

        <Button
            android:id="@+id/login1"
            android:layout_width="207dp"
            android:layout_height="72dp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#AC8B46"
            android:text="LOG IN"
            android:textSize="20dp" />


    </LinearLayout>





</RelativeLayout>